@@ -8,7 +8,11 @@
 
 package org.opensearch.search.backpressure;
 
+import org.junit.After;
+import org.junit.Before;
+import org.opensearch.Version;
 import org.opensearch.action.search.SearchShardTask;
+import org.opensearch.action.search.SearchTask;
 import org.opensearch.common.io.stream.StreamInput;
 import org.opensearch.common.io.stream.StreamOutput;
 import org.opensearch.common.settings.ClusterSettings;
@@ -16,17 +20,23 @@ import org.opensearch.common.settings.Settings;
 import org.opensearch.search.backpressure.settings.SearchBackpressureMode;
 import org.opensearch.search.backpressure.settings.SearchBackpressureSettings;
 import org.opensearch.search.backpressure.settings.SearchShardTaskSettings;
+import org.opensearch.search.backpressure.settings.SearchTaskSettings;
+import org.opensearch.search.backpressure.stats.SearchShardTaskStats;
+import org.opensearch.search.backpressure.stats.SearchTaskStats;
 import org.opensearch.search.backpressure.trackers.NodeDuressTracker;
 import org.opensearch.common.xcontent.XContentBuilder;
 import org.opensearch.search.backpressure.stats.SearchBackpressureStats;
-import org.opensearch.search.backpressure.stats.SearchShardTaskStats;
 import org.opensearch.search.backpressure.trackers.TaskResourceUsageTracker;
 import org.opensearch.search.backpressure.trackers.TaskResourceUsageTrackerType;
 import org.opensearch.tasks.CancellableTask;
 import org.opensearch.tasks.Task;
 import org.opensearch.tasks.TaskCancellation;
+import org.opensearch.tasks.TaskCancellationService;
+import org.opensearch.tasks.TaskManager;
 import org.opensearch.tasks.TaskResourceTrackingService;
 import org.opensearch.test.OpenSearchTestCase;
+import org.opensearch.test.transport.MockTransportService;
+import org.opensearch.threadpool.TestThreadPool;
 import org.opensearch.threadpool.ThreadPool;
 
 import java.io.IOException;
@@ -41,6 +51,8 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.LongSupplier;
 
+import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
@@ -51,10 +63,28 @@ import static org.mockito.Mockito.when;
 import static org.opensearch.search.backpressure.SearchBackpressureTestHelpers.createMockTaskWithResourceStats;
 
 public class SearchBackpressureServiceTests extends OpenSearchTestCase {
+    MockTransportService transportService;
+    TaskManager taskManager;
+    ThreadPool threadPool;
+
+    @Before
+    public void setup() {
+        threadPool = new TestThreadPool(getClass().getName());
+        transportService = MockTransportService.createNewService(Settings.EMPTY, Version.CURRENT, threadPool);
+        transportService.start();
+        transportService.acceptIncomingRequests();
+        taskManager = transportService.getTaskManager();
+        taskManager.setTaskCancellationService(new TaskCancellationService(transportService));
+    }
+
+    @After
+    public void cleanup() {
+        transportService.close();
+        ThreadPool.terminate(threadPool, 5, TimeUnit.SECONDS);
+    }
 
     public void testIsNodeInDuress() {
         TaskResourceTrackingService mockTaskResourceTrackingService = mock(TaskResourceTrackingService.class);
-        ThreadPool mockThreadPool = mock(ThreadPool.class);
 
         AtomicReference<Double> cpuUsage = new AtomicReference<>();
         AtomicReference<Double> heapUsage = new AtomicReference<>();
@@ -69,10 +99,12 @@ public class SearchBackpressureServiceTests extends OpenSearchTestCase {
         SearchBackpressureService service = new SearchBackpressureService(
             settings,
             mockTaskResourceTrackingService,
-            mockThreadPool,
+            threadPool,
             System::nanoTime,
             List.of(cpuUsageTracker, heapUsageTracker),
-            Collections.emptyList()
+            Collections.emptyList(),
+            Collections.emptyList(),
+            taskManager
         );
 
         // Node not in duress.
@@ -95,9 +127,8 @@ public class SearchBackpressureServiceTests extends OpenSearchTestCase {
         assertFalse(service.isNodeInDuress());
     }
 
-    public void testTrackerStateUpdateOnTaskCompletion() {
+    public void testTrackerStateUpdateOnSearchTaskCompletion() {
         TaskResourceTrackingService mockTaskResourceTrackingService = mock(TaskResourceTrackingService.class);
-        ThreadPool mockThreadPool = mock(ThreadPool.class);
         LongSupplier mockTimeNanosSupplier = () -> TimeUnit.SECONDS.toNanos(1234);
         TaskResourceUsageTracker mockTaskResourceUsageTracker = mock(TaskResourceUsageTracker.class);
 
@@ -109,29 +140,209 @@ public class SearchBackpressureServiceTests extends OpenSearchTestCase {
         SearchBackpressureService service = new SearchBackpressureService(
             settings,
             mockTaskResourceTrackingService,
-            mockThreadPool,
+            threadPool,
             mockTimeNanosSupplier,
             Collections.emptyList(),
-            List.of(mockTaskResourceUsageTracker)
+            List.of(mockTaskResourceUsageTracker),
+            Collections.emptyList(),
+            taskManager
         );
 
-        // Record task completions to update the tracker state. Tasks other than SearchShardTask are ignored.
+        for (int i = 0; i < 100; i++) {
+            // service.onTaskCompleted(new SearchTask(1, "test", "test", () -> "Test", TaskId.EMPTY_TASK_ID, new HashMap<>()));
+            service.onTaskCompleted(createMockTaskWithResourceStats(SearchTask.class, 100, 200));
+        }
+        assertEquals(100, service.getSearchBackpressureState(SearchTask.class).getCompletionCount());
+        verify(mockTaskResourceUsageTracker, times(100)).update(any());
+    }
+
+    public void testTrackerStateUpdateOnSearchShardTaskCompletion() {
+        TaskResourceTrackingService mockTaskResourceTrackingService = mock(TaskResourceTrackingService.class);
+        LongSupplier mockTimeNanosSupplier = () -> TimeUnit.SECONDS.toNanos(1234);
+        TaskResourceUsageTracker mockTaskResourceUsageTracker = mock(TaskResourceUsageTracker.class);
+
+        SearchBackpressureSettings settings = new SearchBackpressureSettings(
+            Settings.EMPTY,
+            new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
+        );
+
+        SearchBackpressureService service = new SearchBackpressureService(
+            settings,
+            mockTaskResourceTrackingService,
+            threadPool,
+            mockTimeNanosSupplier,
+            Collections.emptyList(),
+            Collections.emptyList(),
+            List.of(mockTaskResourceUsageTracker),
+            taskManager
+        );
+
+        // Record task completions to update the tracker state. Tasks other than SearchTask & SearchShardTask are ignored.
         service.onTaskCompleted(createMockTaskWithResourceStats(CancellableTask.class, 100, 200));
         for (int i = 0; i < 100; i++) {
             service.onTaskCompleted(createMockTaskWithResourceStats(SearchShardTask.class, 100, 200));
         }
-        assertEquals(100, service.getState().getCompletionCount());
+        assertEquals(100, service.getSearchBackpressureState(SearchShardTask.class).getCompletionCount());
         verify(mockTaskResourceUsageTracker, times(100)).update(any());
     }
 
-    public void testInFlightCancellation() {
+    public void testSearchTaskInFlightCancellation() {
+        TaskManager mockTaskManager = spy(taskManager);
         TaskResourceTrackingService mockTaskResourceTrackingService = mock(TaskResourceTrackingService.class);
-        ThreadPool mockThreadPool = mock(ThreadPool.class);
         AtomicLong mockTime = new AtomicLong(0);
         LongSupplier mockTimeNanosSupplier = mockTime::get;
         NodeDuressTracker mockNodeDuressTracker = new NodeDuressTracker(() -> true);
 
-        TaskResourceUsageTracker mockTaskResourceUsageTracker = new TaskResourceUsageTracker() {
+        TaskResourceUsageTracker mockTaskResourceUsageTracker = getMockedTaskResourceUsageTracker();
+
+        // Mocking 'settings' with predictable rate limiting thresholds.
+        SearchBackpressureSettings settings = getBackpressureSettings("enforced", 0.1, 0.003, 5.0);
+
+        SearchBackpressureService service = new SearchBackpressureService(
+            settings,
+            mockTaskResourceTrackingService,
+            threadPool,
+            mockTimeNanosSupplier,
+            List.of(mockNodeDuressTracker),
+            List.of(mockTaskResourceUsageTracker),
+            Collections.emptyList(),
+            mockTaskManager
+        );
+
+        // Run two iterations so that node is marked 'in duress' from the third iteration onwards.
+        service.doRun();
+        service.doRun();
+
+        // Mocking 'settings' with predictable totalHeapBytesThreshold so that cancellation logic doesn't get skipped.
+        long taskHeapUsageBytes = 500;
+        SearchTaskSettings searchTaskSettings = mock(SearchTaskSettings.class);
+        // setting the total heap percent threshold to minimum so that circuit does not break in SearchBackpressureService
+        when(searchTaskSettings.getTotalHeapPercentThreshold()).thenReturn(0.0);
+        when(settings.getSearchTaskSettings()).thenReturn(searchTaskSettings);
+
+        // Create a mix of low and high resource usage SearchTasks (50 low + 25 high resource usage tasks).
+        Map<Long, Task> activeSearchTasks = new HashMap<>();
+        for (long i = 0; i < 75; i++) {
+            if (i % 3 == 0) {
+                activeSearchTasks.put(i, createMockTaskWithResourceStats(SearchTask.class, 500, taskHeapUsageBytes));
+            } else {
+                activeSearchTasks.put(i, createMockTaskWithResourceStats(SearchTask.class, 100, taskHeapUsageBytes));
+            }
+        }
+        doReturn(activeSearchTasks).when(mockTaskResourceTrackingService).getResourceAwareTasks();
+
+        // There are 25 SearchTasks eligible for cancellation but only 5 will be cancelled (burst limit).
+        service.doRun();
+        verify(mockTaskManager, times(5)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(1, service.getSearchBackpressureState(SearchTask.class).getLimitReachedCount());
+
+        // If the clock or completed task count haven't made sufficient progress, we'll continue to be rate-limited.
+        service.doRun();
+        verify(mockTaskManager, times(5)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(2, service.getSearchBackpressureState(SearchTask.class).getLimitReachedCount());
+
+        // Fast-forward the clock by ten second to replenish some tokens.
+        // This will add 50 tokens (time delta * rate) to 'rateLimitPerTime' but it will cancel only 5 tasks (burst limit).
+        mockTime.addAndGet(TimeUnit.SECONDS.toNanos(10));
+        service.doRun();
+        verify(mockTaskManager, times(10)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(3, service.getSearchBackpressureState(SearchTask.class).getLimitReachedCount());
+
+        // Verify search backpressure stats.
+        SearchBackpressureStats expectedStats = new SearchBackpressureStats(
+            new SearchTaskStats(10, 3, Map.of(TaskResourceUsageTrackerType.CPU_USAGE_TRACKER, new MockStats(10))),
+            new SearchShardTaskStats(0, 0, Collections.emptyMap()),
+            SearchBackpressureMode.ENFORCED
+        );
+        SearchBackpressureStats actualStats = service.nodeStats();
+        assertEquals(expectedStats, actualStats);
+    }
+
+    public void testSearchShardTaskInFlightCancellation() {
+        TaskManager mockTaskManager = spy(taskManager);
+        TaskResourceTrackingService mockTaskResourceTrackingService = mock(TaskResourceTrackingService.class);
+        AtomicLong mockTime = new AtomicLong(0);
+        LongSupplier mockTimeNanosSupplier = mockTime::get;
+        NodeDuressTracker mockNodeDuressTracker = new NodeDuressTracker(() -> true);
+
+        TaskResourceUsageTracker mockTaskResourceUsageTracker = getMockedTaskResourceUsageTracker();
+
+        // Mocking 'settings' with predictable rate limiting thresholds.
+        SearchBackpressureSettings settings = getBackpressureSettings("enforced", 0.1, 0.003, 10.0);
+
+        SearchBackpressureService service = new SearchBackpressureService(
+            settings,
+            mockTaskResourceTrackingService,
+            threadPool,
+            mockTimeNanosSupplier,
+            List.of(mockNodeDuressTracker),
+            Collections.emptyList(),
+            List.of(mockTaskResourceUsageTracker),
+            mockTaskManager
+        );
+
+        // Run two iterations so that node is marked 'in duress' from the third iteration onwards.
+        service.doRun();
+        service.doRun();
+
+        // Mocking 'settings' with predictable totalHeapBytesThreshold so that cancellation logic doesn't get skipped.
+        long taskHeapUsageBytes = 500;
+        SearchShardTaskSettings searchShardTaskSettings = mock(SearchShardTaskSettings.class);
+        // setting the total heap percent threshold to minimum so that circuit does not break in SearchBackpressureService
+        when(searchShardTaskSettings.getTotalHeapPercentThreshold()).thenReturn(0.0);
+        when(settings.getSearchShardTaskSettings()).thenReturn(searchShardTaskSettings);
+
+        // Create a mix of low and high resource usage tasks (60 low + 15 high resource usage tasks).
+        Map<Long, Task> activeSearchShardTasks = new HashMap<>();
+        for (long i = 0; i < 75; i++) {
+            if (i % 5 == 0) {
+                activeSearchShardTasks.put(i, createMockTaskWithResourceStats(SearchShardTask.class, 500, taskHeapUsageBytes));
+            } else {
+                activeSearchShardTasks.put(i, createMockTaskWithResourceStats(SearchShardTask.class, 100, taskHeapUsageBytes));
+            }
+        }
+        doReturn(activeSearchShardTasks).when(mockTaskResourceTrackingService).getResourceAwareTasks();
+
+        // There are 15 SearchShardTasks eligible for cancellation but only 10 will be cancelled (burst limit).
+        service.doRun();
+        verify(mockTaskManager, times(10)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(1, service.getSearchBackpressureState(SearchShardTask.class).getLimitReachedCount());
+
+        // If the clock or completed task count haven't made sufficient progress, we'll continue to be rate-limited.
+        service.doRun();
+        verify(mockTaskManager, times(10)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(2, service.getSearchBackpressureState(SearchShardTask.class).getLimitReachedCount());
+
+        // Simulate task completion to replenish some tokens.
+        // This will add 2 tokens (task count delta * cancellationRatio) to 'rateLimitPerTaskCompletion'.
+        for (int i = 0; i < 20; i++) {
+            service.onTaskCompleted(createMockTaskWithResourceStats(SearchShardTask.class, 100, taskHeapUsageBytes));
+        }
+        service.doRun();
+        verify(mockTaskManager, times(12)).cancelTaskAndDescendants(any(), anyString(), anyBoolean(), any());
+        assertEquals(3, service.getSearchBackpressureState(SearchShardTask.class).getLimitReachedCount());
+
+        // Verify search backpressure stats.
+        SearchBackpressureStats expectedStats = new SearchBackpressureStats(
+            new SearchTaskStats(0, 0, Collections.emptyMap()),
+            new SearchShardTaskStats(12, 3, Map.of(TaskResourceUsageTrackerType.CPU_USAGE_TRACKER, new MockStats(12))),
+            SearchBackpressureMode.ENFORCED
+        );
+        SearchBackpressureStats actualStats = service.nodeStats();
+        assertEquals(expectedStats, actualStats);
+    }
+
+    private SearchBackpressureSettings getBackpressureSettings(String mode, double ratio, double rate, double burst) {
+        return spy(
+            new SearchBackpressureSettings(
+                Settings.builder().put(SearchBackpressureSettings.SETTING_MODE.getKey(), mode).build(),
+                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
+            )
+        );
+    }
+
+    private TaskResourceUsageTracker getMockedTaskResourceUsageTracker() {
+        return new TaskResourceUsageTracker() {
             @Override
             public String name() {
                 return TaskResourceUsageTrackerType.CPU_USAGE_TRACKER.getName();
@@ -150,87 +361,10 @@ public class SearchBackpressureServiceTests extends OpenSearchTestCase {
             }
 
             @Override
-            public Stats stats(List<? extends Task> activeTasks) {
+            public Stats stats(List<? extends Task> tasks) {
                 return new MockStats(getCancellations());
             }
         };
-
-        // Mocking 'settings' with predictable rate limiting thresholds.
-        SearchBackpressureSettings settings = spy(
-            new SearchBackpressureSettings(
-                Settings.builder()
-                    .put(SearchBackpressureSettings.SETTING_MODE.getKey(), "enforced")
-                    .put(SearchBackpressureSettings.SETTING_CANCELLATION_RATIO.getKey(), 0.1)
-                    .put(SearchBackpressureSettings.SETTING_CANCELLATION_RATE.getKey(), 0.003)
-                    .put(SearchBackpressureSettings.SETTING_CANCELLATION_BURST.getKey(), 10.0)
-                    .build(),
-                new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS)
-            )
-        );
-
-        SearchBackpressureService service = new SearchBackpressureService(
-            settings,
-            mockTaskResourceTrackingService,
-            mockThreadPool,
-            mockTimeNanosSupplier,
-            List.of(mockNodeDuressTracker),
-            List.of(mockTaskResourceUsageTracker)
-        );
-
-        // Run two iterations so that node is marked 'in duress' from the third iteration onwards.
-        service.doRun();
-        service.doRun();
-
-        // Mocking 'settings' with predictable totalHeapBytesThreshold so that cancellation logic doesn't get skipped.
-        long taskHeapUsageBytes = 500;
-        SearchShardTaskSettings shardTaskSettings = mock(SearchShardTaskSettings.class);
-        when(shardTaskSettings.getTotalHeapBytesThreshold()).thenReturn(taskHeapUsageBytes);
-        when(settings.getSearchShardTaskSettings()).thenReturn(shardTaskSettings);
-
-        // Create a mix of low and high resource usage tasks (60 low + 15 high resource usage tasks).
-        Map<Long, Task> activeTasks = new HashMap<>();
-        for (long i = 0; i < 75; i++) {
-            if (i % 5 == 0) {
-                activeTasks.put(i, createMockTaskWithResourceStats(SearchShardTask.class, 500, taskHeapUsageBytes));
-            } else {
-                activeTasks.put(i, createMockTaskWithResourceStats(SearchShardTask.class, 100, taskHeapUsageBytes));
-            }
-        }
-        doReturn(activeTasks).when(mockTaskResourceTrackingService).getResourceAwareTasks();
-
-        // There are 15 tasks eligible for cancellation but only 10 will be cancelled (burst limit).
-        service.doRun();
-        assertEquals(10, service.getState().getCancellationCount());
-        assertEquals(1, service.getState().getLimitReachedCount());
-
-        // If the clock or completed task count haven't made sufficient progress, we'll continue to be rate-limited.
-        service.doRun();
-        assertEquals(10, service.getState().getCancellationCount());
-        assertEquals(2, service.getState().getLimitReachedCount());
-
-        // Simulate task completion to replenish some tokens.
-        // This will add 2 tokens (task count delta * cancellationRatio) to 'rateLimitPerTaskCompletion'.
-        for (int i = 0; i < 20; i++) {
-            service.onTaskCompleted(createMockTaskWithResourceStats(SearchShardTask.class, 100, taskHeapUsageBytes));
-        }
-        service.doRun();
-        assertEquals(12, service.getState().getCancellationCount());
-        assertEquals(3, service.getState().getLimitReachedCount());
-
-        // Fast-forward the clock by one second to replenish some tokens.
-        // This will add 3 tokens (time delta * rate) to 'rateLimitPerTime'.
-        mockTime.addAndGet(TimeUnit.SECONDS.toNanos(1));
-        service.doRun();
-        assertEquals(15, service.getState().getCancellationCount());
-        assertEquals(3, service.getState().getLimitReachedCount());  // no more tasks to cancel; limit not reached
-
-        // Verify search backpressure stats.
-        SearchBackpressureStats expectedStats = new SearchBackpressureStats(
-            new SearchShardTaskStats(15, 3, Map.of(TaskResourceUsageTrackerType.CPU_USAGE_TRACKER, new MockStats(15))),
-            SearchBackpressureMode.ENFORCED
-        );
-        SearchBackpressureStats actualStats = service.nodeStats();
-        assertEquals(expectedStats, actualStats);
     }
 
     private static class MockStats implements TaskResourceUsageTracker.Stats {
